--- a/language/loginPage.json
+++ b/language/loginPage.json
@@ -3,21 +3,14 @@
     "lang_code": "pt",
     "content": {
       "header": "Sign In",
-      "btnLogin": "CLICK HERE"
+      "btnLogin": "SIGN IN"
     }
   },
   {
     "lang_code": "en",
     "content": {
       "header": "Sign In",
-      "btnLogin": "CLICK HERE"
-    }
-  },
-  {
-    "lang_code": "es",
-    "content": {
-      "header": "Sign In",
-      "btnLogin": "CLICK HERE"
+      "btnLogin": "SIGN IN"
     }
   }
 ]
