--- a/language/homeComponent.json
+++ b/language/homeComponent.json
@@ -1,5 +1,15 @@
 [
     {
+        "lang_code": "pt",
+        "content": {
+            "banner": {
+                "title": "~lanlyd Hosting Services",
+                "description": "The Urbit network is the place to recapture the real spirit of computing innovation. Are you ready?",
+                "btnLetsGo": "Oh I'm ready!"
+            }
+        }
+    },
+    {
         "lang_code": "en",
         "content": {
             "banner": {
