--- a/language/homeComponent.json
+++ b/language/homeComponent.json
@@ -9,8 +9,7 @@
         "content": {
             "banner": {
                 "title": "~lanlyd Hosting Services",
-                "description": "The Urbit network is the place to recapture the real spirit of computing innovation. Are you ready?",
-                "btnLetsGo": "Oh I'm ready!"
+                "description": "The Urbit network is the place to recapture the real spirit of computing innovation. Are you ready?"
             }
         }
     }
