--- a/language/homeComponent.json
+++ b/language/homeComponent.json
@@ -1,15 +1,11 @@
 [
     {
-        "lang_code": "pt",
-        "content": {
-        }
-    },
-    {
         "lang_code": "en",
         "content": {
             "banner": {
                 "title": "~lanlyd Hosting Services",
-                "description": "The Urbit network is the place to recapture the real spirit of computing innovation. Are you ready?"
+                "description": "The Urbit network is the place to recapture the real spirit of computing innovation. Are you ready?",
+                "btnLetsGo": "Oh I'm ready!"
             }
         }
     }
