--- a/language/homeComponent.json
+++ b/language/homeComponent.json
@@ -1,5 +1,10 @@
 [
     {
+        "lang_code": "pt",
+        "content": {
+        }
+    },
+    {
         "lang_code": "en",
         "content": {
             "banner": {
