--- a/language/homeComponent.json
+++ b/language/homeComponent.json
@@ -1,39 +1,20 @@
 [
     {
         "lang_code": "pt",
-        "content": {
-            "header": "Oi John",
-            "btnSignup": "ME APERTE"
-        }
+        "content": {}
     },
     {
         "lang_code": "en",
         "content": {
             "banner": {
-                "title": "Hosting",
-                "btnLetsGo": "Let's Not go"
-            },
-            "urbit": {
-                "title": "Why is Urbit?",
-                "cards": {
-                    "cardId": {
-                        "title": "Urbit IP",
-                        "description": "Is really confusing"
-                    },
-                    "btnUrbit": "Explore Less!"
-                }
+                "title": "Start using Urbit. Today.",
+                "description": "Urbit is a personal server. It's a secure home for your digital life—and it's yours forever. Your Urbit can run applications, organize files, send messages, store your cryptocurrency, and even update itself. It's a private, encrypted home base on the internet. All available under one login. Are you ready?",
+                "btnLetsGo": "Oh I'm ready!"
             },
             "nonexistingsettingbundle": {
                 "setting1": "six",
                 "setting2": "seven"
             }
-        }
-    },
-    {
-        "lang_code": "es",
-        "content": {
-            "header": "Hola John",
-            "btnSignup": "APERTA ME"
         }
     }
 ]
